kubernetes/apps/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: app
  labels:
    name: gateway
    app: app
spec:
  replicas: 1
  selector:
      matchLabels:
        name: gateway
  template:
    metadata:
      labels:
        name: gateway
    spec:
      containers:
      - name: gateway
        image: onlinex/app:latest
        ports:
        - containerPort: 80
