kubernetes/apps/gateway.yaml
# The .spec.selector field defines how the Deployment finds which Pods to manage.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: app
  labels:
    name: gateway
spec:
  replicas: 3
  revisionHistoryLimit: 5 # Number of old ReplicaSets to retain to allow rollback.
  selector: # defines how the Deployment finds which Pods to manage.
      matchLabels:
        name: gateway
  template: # Pod's template (the deployment is triggered only if this part is changed)
    metadata:
      labels:
        name: gateway
    spec:
      containers:
      - name: gateway
        image: onlinex/app:0.0.1 # {"$imagepolicy": "flux-system:gateway"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
