kubernetes/apps/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: app
  labels:
    name: gateway
    app: app
spec:
  selector:
    name: gateway
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: 80
     protocol: TCP
